--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 </header>
 
 
-<main class="container features">
-
+<main class="features">
   <section class="feature__item track">
-    <div class="feature__content">
+    <div class="container feature__content">
       <h2 class="feature__title">Keep track of your snippets</h2>
       <p class="feature__text">
         Clipboard instantly stores any item you copy in the cloud,
@@ -43,6 +42,7 @@
         devices. Our Mac and iOS apps will help you organize everything.
       </p>
     </div>
+
     <section class="feature__image">
       <img src="./images/image-computer.png" alt="computer">
     </section>
@@ -88,20 +88,32 @@
 
     <ul class="list">
       <li class="list__item">
-        <img src="./images/icon-blacklist.svg" alt="" class="item__image">
-        <h3 class="item__title">Create blacklists</h3>
-        <p class="item__text">Ensure sensitive information never makes its way to your clipboard by excluding certain
-          sources.</p>
+        <div class="list__image">
+          <img src="./images/icon-blacklist.svg" alt="" class="item__image">
+        </div>
+        <div class="list__content">
+          <h3 class="item__title">Create blacklists</h3>
+          <p class="item__text">Ensure sensitive information never makes its way to your clipboard by excluding certain
+            sources.</p>
+        </div>
       </li>
       <li class="list__item">
-        <img src="./images/icon-text.svg" alt="" class="item__image">
-        <h3 class="item__title">Plain text snippets</h3>
-        <p class="item__text">Remove unwanted formatting from copied text for a consistent look.</p>
+        <div class="list__image">
+          <img src="./images/icon-text.svg" alt="" class="item__image">
+        </div>
+        <div class="list__content">
+          <h3 class="item__title">Plain text snippets</h3>
+          <p class="item__text">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
       </li>
       <li class="list__item">
-        <img src="./images/icon-preview.svg" alt="" class="item__image">
-        <h3 class="item__title">Sneak preview</h3>
-        <p class="item__text">Quick preview of all snippets on your Clipboard for easy access.</p>
+        <div class="list__image">
+          <img src="./images/icon-preview.svg" alt="" class="item__image">
+        </div>
+        <div class="list__content">
+          <h3 class="item__title">Sneak preview</h3>
+          <p class="item__text">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
       </li>
 
     </ul>
@@ -110,13 +122,14 @@
 
 
 <footer class="footer">
-  <section class="container footer__brand">
+  <section class="footer__brand">
     <ul class="list brand__list">
-      <li class="list__item"><img src="./images/logo-google.png" alt="google logo"></li>
-      <li class="list__item"><img src="./images/logo-ibm.png" alt="ibm logo"></li>
-      <li class="list__item"><img src="./images/logo-microsoft.png" alt="microsoft logo"></li>
-      <li class="list__item"><img src="./images/logo-hp.png" alt="hp logo"></li>
-      <li class="list__item"><img src="./images/logo-vector-graphics.png" alt="vector graphic logo"></li>
+      <li class="list__item"><img class="list__image" src="./images/logo-google.png" alt="google logo"></li>
+      <li class="list__item"><img class="list__image" src="./images/logo-ibm.png" alt="ibm logo"></li>
+      <li class="list__item"><img class="list__image" src="./images/logo-microsoft.png" alt="microsoft logo"></li>
+      <li class="list__item"><img class="list__image" src="./images/logo-hp.png" alt="hp logo"></li>
+      <li class="list__item"><img class="list__image" src="./images/logo-vector-graphics.png" alt="vector graphic logo">
+      </li>
     </ul>
   </section>
 
@@ -132,33 +145,36 @@
   </section>
 
   <section class="footer__nav">
-    <div class="footer__logo">
-      <img src="./images/logo.svg" alt="logo">
+    <div class="footer__container">
+      <div class="footer__logo">
+        <img src="./images/logo.svg" alt="logo">
+      </div>
+      <ul class="list navigation">
+        <li class="list__item"><a href="#" class="list__link">FAQs</a></li>
+        <li class="list__item"><a href="#" class="list__link">Contact Us</a></li>
+        <li class="list__item"><a href="#" class="list__link">Privacy Policy</a></li>
+        <li class="list__item"><a href="#" class="list__link">Press Kit</a></li>
+        <li class="list__item"><a href="#" class="list__link">Install Guide</a></li>
+      </ul>
+      <ul class="list social__media">
+        <li class="list__item">
+          <a href="#" class="list__link">
+            <i class="fa-brands fa-facebook-square"></i>
+          </a>
+        </li>
+        <li class="list__item">
+          <a href="#" class="list__link">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li class="list__item">
+          <a href="#" class="list__link">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-    <ul class="list navigation">
-      <li class="list__item"><a href="#" class="list__link">FAQs</a></li>
-      <li class="list__item"><a href="#" class="list__link">Contact Us</a></li>
-      <li class="list__item"><a href="#" class="list__link">Privacy Policy</a></li>
-      <li class="list__item"><a href="#" class="list__link">Press Kit</a></li>
-      <li class="list__item"><a href="#" class="list__link">Install Guide</a></li>
-    </ul>
-    <ul class="list social__media">
-      <li class="list__item">
-        <a href="#" class="list__link">
-          <i class="fa-brands fa-facebook-square"></i>
-        </a>
-      </li>
-      <li class="list__item">
-        <a href="#" class="list__link">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-      </li>
-      <li class="list__item">
-        <a href="#" class="list__link">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </li>
-    </ul>
+  </section>
 </footer>
 
 </html>
