--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
       </ul>
       <ul class="list social__media">
         <li class="list__item">
-          <a href="#" class="list__link">
+          <a href="#" class="list__link" aria-label="visit our facebook pages">
             <i class="fa-brands fa-facebook-square"></i>
           </a>
         </li>
         <li class="list__item">
-          <a href="#" class="list__link">
+          <a href="#" class="list__link" aria-label="visit our twitter pages">
             <i class="fa-brands fa-twitter"></i>
           </a>
         </li>
         <li class="list__item">
-          <a href="#" class="list__link">
+          <a href="#" class="list__link" aria-label="visit our instagram pages">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
