fix html validation

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 </body>
 <header class="header">
   <div class="container">
-    <section class="header__image">
+    <div class="header__image">
       <img class="logo" src="./images/logo.svg" alt="logo">
-    </section>
-    <section class="header__content">
+    </div>
+    <div class="header__content">
       <h1 class="header__title">A history of everything you copy</h1>
       <p class="header__text">Clipboard allows you to track and organize everything you
         copy. Instantly access your clipboard on all your devices.</p>
-    </section>
-    <section class="header__button">
+    </div>
+    <div class="header__button">
       <button class="btn ios">Download for iOS</button>
       <button class="btn mac">Download for Mac</button>
-    </section>
+    </div>
   </div>
 </header>
 
 
 <main class="features">
-  <section class="feature__item track">
+  <div class="feature__item track">
     <div class="container feature__content">
       <h2 class="feature__title">Keep track of your snippets</h2>
       <p class="feature__text">
@@ -43,9 +43,9 @@
       </p>
     </div>
 
-    <section class="feature__image">
+    <div class="feature__image">
       <img src="./images/image-computer.png" alt="computer">
-    </section>
+    </div>
 
     <ul class="list">
       <li class="list__item">
@@ -63,9 +63,9 @@
       </li>
 
     </ul>
-  </section>
+  </div>
 
-  <section class="feature__item clipboard">
+  <div class="feature__item clipboard">
     <div class="feature__content">
       <h2 class="feature__title">Access Clipboard anywhere</h2>
       <p class="feature__text">
@@ -73,12 +73,12 @@
         snippets in a few simple clicks.
       </p>
     </div>
-    <section class="feature__image">
+    <div class="feature__image">
       <img src="./images/image-devices.png" alt="computer">
-    </section>
-  </section>
+    </div>
+  </div>
 
-  <section class="feature__item workflow">
+  <div class="feature__item workflow">
     <div class="feature__content">
       <h2 class="feature__title">Supercharge your workflow</h2>
       <p class="feature__text">
@@ -117,12 +117,12 @@
       </li>
 
     </ul>
-  </section>
+  </div>
 </main>
 
 
 <footer class="footer">
-  <section class="footer__brand">
+  <div class="footer__brand">
     <ul class="list brand__list">
       <li class="list__item"><img class="list__image" src="./images/logo-google.png" alt="google logo"></li>
       <li class="list__item"><img class="list__image" src="./images/logo-ibm.png" alt="ibm logo"></li>
@@ -131,9 +131,9 @@
       <li class="list__item"><img class="list__image" src="./images/logo-vector-graphics.png" alt="vector graphic logo">
       </li>
     </ul>
-  </section>
+  </div>
 
-  <section class="container footer__download">
+  <div class="container footer__download">
     <h3 class="item__title">Clipboard for iOS and Mac OS</h3>
     <p class="item__text">Available for free on the App Store. Download for Mac or iOS, sync with iCloud
       and you’re ready to start adding to your clipboard.</p>
@@ -142,9 +142,9 @@
       <button class="btn ios">Download for iOS</button>
       <button class="btn mac">Download for Mac</button>
     </div>
-  </section>
+  </div>
 
-  <section class="footer__nav">
+  <div class="footer__nav">
     <div class="footer__container">
       <div class="footer__logo">
         <img src="./images/logo.svg" alt="logo">
@@ -174,7 +174,7 @@
         </li>
       </ul>
     </div>
-  </section>
+  </div>
 </footer>
 
 </html>
