--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Clipboard landing page</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/stylesheet.css">
-  <script src="https://kit.fontawesome.com/a6e3bbc644.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/a6e3bbc644.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -159,17 +159,17 @@
       <ul class="list social__media">
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our facebook pages">
-            <i class="fa-brands fa-facebook-square"></i>
+            <img src="./images/icon-facebook.svg" alt="facebook logo">
           </a>
         </li>
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our twitter pages">
-            <i class="fa-brands fa-twitter"></i>
+            <img src="./images/icon-twitter.svg" alt="twitter logo">
           </a>
         </li>
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our instagram pages">
-            <i class="fa-brands fa-instagram"></i>
+            <img src="./images/icon-instagram.svg" alt="instagram logo">
           </a>
         </li>
       </ul>
