fix some respinsive and design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Clipboard landing page</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/stylesheet.css">
-  <!-- <script src="https://kit.fontawesome.com/a6e3bbc644.js" crossorigin="anonymous"></script> -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -159,17 +159,17 @@
       <ul class="list social__media">
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our facebook pages">
-            <img src="./images/icon-facebook.svg" alt="facebook logo">
+            <i class="fa-brands ri-facebook-box-fill"></i>
           </a>
         </li>
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our twitter pages">
-            <img src="./images/icon-twitter.svg" alt="twitter logo">
+            <i class="fa-brands ri-twitter-fill"></i>
           </a>
         </li>
         <li class="list__item">
           <a href="#" class="list__link" aria-label="visit our instagram pages">
-            <img src="./images/icon-instagram.svg" alt="instagram logo">
+            <i class="fa-brands ri-instagram-fill"></i>
           </a>
         </li>
       </ul>
